RESOLVED FIXED305363
Digital Credential: CredentialRequestCoordinator can remain non-Idle if AbortSignal races with picker result
https://bugs.webkit.org/show_bug.cgi?id=305363
Summary Digital Credential: CredentialRequestCoordinator can remain non-Idle if Abort...
Marcos Caceres
Reported 2026-01-12 22:56:04 PST
Calling navigator.credentials.get() and aborting the request can leave the browser thinking a credential picker is still active. Subsequent calls then fail with "InvalidStateError: A credential picker operation is already in progress", even though no picker UI is visible. This happens when a request is aborted while the picker is being shown or dismissed, and the promise settles before the picker UI has fully torn down.
Attachments
Marcos Caceres
Comment 1 2026-01-13 05:20:51 PST
Marcos Caceres
Comment 2 2026-01-13 05:27:40 PST
EWS
Comment 3 2026-01-20 01:50:06 PST
Committed 305868@main (8a961b3ac718): <https://commits.webkit.org/305868@main> Reviewed commits have been landed. Closing PR #56489 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.